--- a/DayThree_Portfolio/DayThree_Portfolio.csproj
+++ b/DayThree_Portfolio/DayThree_Portfolio.csproj
@@ -187,6 +187,7 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\FontAwesome.otf" />
+    <None Include="Properties\PublishProfiles\jTwichell-DayThreePortfolio - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\contact_me.js" />
     <Content Include="Scripts\Demo.js" />
